--- a/styles/style.css
+++ b/styles/style.css
@@ -249,6 +249,17 @@ section h2 {
     padding: .5rem 3rem;
     border: none;
     border-radius: .5rem;
+    border: 2px solid var(--background-color-contrast);
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: var(--primary-color-contrast);
+    color: var(--background-color-contrast);
+    border: 2px solid var(--primary-color);
+    padding: .5rem 3rem;
+    border-radius: .5rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 #certificate-list {
@@ -295,5 +306,16 @@ section h2 {
 
     #certificate-list {
         grid-template-columns: 1fr; /* Single column on mobile */
+    }
+
+    .btn {
+        background-color: var(--background-color-contrast);
+        color: var(--primary-color-contrast);
+        padding: .5rem 1rem;
+        border: none;
+        border-radius: .5rem;
+        font-size: 1rem;
+        white-space: nowrap;
+        cursor: pointer;
     }
 }
