--- a/styles/style.css
+++ b/styles/style.css
@@ -285,27 +285,50 @@ section h2 {
         font-size: 14px; /* Adjust base font size */
     }
 
-    .hero {
-        padding: 1rem;
-        flex-direction: column; 
-        align-items: center;
-    }
-
-    .navigation ul {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
     .container {
         flex-direction: column;
     }
-
-    .section-one, .section-two, .section-three {
-        width: 100%; /* Full width on mobile */
+    
+    .section-one {
+        order: 1; 
     }
-
+    
+    .section-two {
+        order: 2;
+    
+    }
+    
+    .section-three {
+        order: 3;
+    
+    }
+    
+    .my-place-photo img{
+        height: auto;
+        max-width: 279px;
+    
+    }
+    
+    .navigation ul {
+        flex-direction: column;
+        gap: 1rem;
+    
+    }
+    
+    .hero {
+        font-size: small;
+        gap: .5rem;
+    
+    }
+    
     #certificate-list {
-        grid-template-columns: 1fr; /* Single column on mobile */
+        margin: 0;
+        padding: 1rem;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    
     }
 
     .btn {
