--- a/styles/style.css
+++ b/styles/style.css
@@ -7,80 +7,24 @@
     --button-color-contrast: #E6EDEF;
 }
 
-/* Font family */
-.kodchasan-extralight {
-    font-family: "Kodchasan", serif;
-    font-weight: 200;
-    font-style: normal;
-  }
-  
-  .kodchasan-light {
-    font-family: "Kodchasan", serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .kodchasan-regular {
+.kodchasan-regular {
     font-family: "Kodchasan", serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-  .kodchasan-medium {
-    font-family: "Kodchasan", serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .kodchasan-semibold {
-    font-family: "Kodchasan", serif;
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  .kodchasan-bold {
-    font-family: "Kodchasan", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .kodchasan-extralight-italic {
-    font-family: "Kodchasan", serif;
-    font-weight: 200;
-    font-style: italic;
-  }
-  
-  .kodchasan-light-italic {
-    font-family: "Kodchasan", serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .kodchasan-regular-italic {
-    font-family: "Kodchasan", serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .kodchasan-medium-italic {
-    font-family: "Kodchasan", serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .kodchasan-semibold-italic {
-    font-family: "Kodchasan", serif;
-    font-weight: 600;
-    font-style: italic;
-  }
-  
-  .kodchasan-bold-italic {
-    font-family: "Kodchasan", serif;
-    font-weight: 700;
-    font-style: italic;
-  }  
-/* End font family code */
+}
 
+.kodchasan-semibold {
+    font-family: "Kodchasan", serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.kodchasan-bold {
+    font-family: "Kodchasan", serif;
+    font-weight: 700;
+    font-style: normal;
+}
+  
 /* Start of the main code */
 /* Box model */
 .box {
@@ -99,6 +43,11 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    font-family: 'Kodchasan', sans-serif;
+}
+  
+h1, h2, h3, p, li, a {
+    font-family: 'Kodchasan', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 main {
