--- a/styles/style.css
+++ b/styles/style.css
@@ -321,6 +321,17 @@ section h2 {
 
     nav.navigation {
         padding: 0;
+        display: grid;
+        grid-template-rows: 0fr;
+        transition: grid-template-rows .5s ease-out;
+    }
+
+    nav ul {
+        overflow: hidden;
+    }
+
+    nav.show {
+        grid-template-rows: 1fr;
     }
 
     .active {
@@ -335,7 +346,7 @@ section h2 {
         display: grid;
         grid-template-columns: 44px auto;
     }
-    
+
     header img {
         width: 50px;
         height: 50px;
