--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -65,13 +65,16 @@ li.current-menu-item a {
 }
 
 .navigation {
-    display: none;
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.5s ease-out;
 }
 
 .navigation.open {
-    display: block;
+    grid-template-rows: 1fr;
 }
 
 .navigation ul {
     list-style-type: none;
+    overflow: hidden;
 }
