--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -83,3 +83,27 @@ li.current-menu-item a {
     list-style-type: none;
     overflow: hidden;
 }
+
+main {
+    padding: 0 5rem;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: .3rem;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--primary-color);
+    color: var(--primary-color-contrast);
+    padding-bottom: 1rem;
+}
+
+p {
+    margin: .1rem;
+    font-size: 14px;
+}
