--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -102,15 +102,16 @@ section {
     background-color: var(--primary-color-contrast);
     color: var(--background-color-contrast);
     padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border: 1px solid white;
+    overflow: scroll;
 }
 
 section:hover {
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
-    transition: .3s ease-in;
-    box-sizing: 0 0 0 rgba(0, 0, 0, 0.1);
+    transition: .2s ease-in;
+    box-sizing: 0 0 0 rgba(0, 0, 0, 0);
 }
 
 p {
