--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -126,7 +126,7 @@ section:hover {
 
 .list section {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
     margin: 0;
     padding: 0.25rem;
     box-shadow: none;
