--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -51,6 +51,10 @@
         padding: 0 5rem;
     }
 
+    section {
+        max-width: 100%;
+    }
+
     .list section {
         overflow-x: hidden;
     }
