--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -13,7 +13,7 @@
         border: none;
         font-size: 1.5rem;
         display: grid;
-        grid-template-columns: 75px 200px auto;
+        grid-template-columns: 75px minmax(150px, 200px) auto;
     }
     
     #company-desc {
@@ -40,6 +40,7 @@
     }
 
     .navigation a:hover {
+        transition: background-color 0.3s ease;
         background-color: rgba(255, 255, 255, 0.2);
     }
 
@@ -52,10 +53,12 @@
     }
 
     section {
+        width: clamp(300px, 100%, 350px);
         max-width: 100%;
     }
 
     .list section {
         overflow-x: hidden;
+        width: 100%;
     }
 }
