footer content added dynamic dates

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -5,6 +5,7 @@
     --background-color-contrast: #000;
     --button-color: #64301D;
     --button-color-contrast: #E6EDEF;
+    --footer-background: #F0F0F0;
 }
 
 body, html {
@@ -198,4 +199,32 @@ p {
 
 .center {
     text-align: center;
+}
+
+footer {
+    margin-top: 2rem;
+    background-color: var(--footer-background);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1rem 5rem;
+}
+
+footer span {
+    flex: 1;
+}
+
+.socials {
+    display: flex;
+    flex: row;
+    gap: 1rem;
+    list-style-type: none;
+}
+
+.socials li a {
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    text-decoration: none;
+    color: var(--primary-color-contrast);
+    padding: 1rem 1.3rem;
 }
