--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -61,4 +61,17 @@
         overflow-x: hidden;
         width: 100%;
     }
+
+    footer {
+        margin-top: 2rem;
+        background-color: var(--footer-background);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 1rem 5rem;
+    }
+    
+    footer span {
+        flex: 1;
+    }
 }
