--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -205,13 +205,13 @@ footer {
     margin-top: 2rem;
     background-color: var(--footer-background);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    padding: 1rem 5rem;
 }
 
 footer span {
     flex: 1;
+    padding: 1rem;
 }
 
 .socials {
@@ -223,8 +223,14 @@ footer span {
 
 .socials li a {
     border-radius: 50%;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-contrast);
     text-decoration: none;
-    color: var(--primary-color-contrast);
-    padding: 1rem 1.3rem;
+    padding: 27px 10px 7px 10px;
+    border: 2px solid var(--primary-color);
+}
+
+.socials li a:hover {
+    background-color: rgba(22, 78, 112, 0.5);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    color: var(--background-color-contrast);
 }
