--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -8,7 +8,7 @@
     --footer-background: #F0F0F0;
 }
 
-body, html, footer {
+body, html, footer, footer div {
     font-family: "Kodchasan", serif;
     font-weight: 400;
     font-style: normal;
@@ -201,48 +201,31 @@ p {
     text-align: center;
 }
 
-footer {
-    margin-top: 2rem;
-    background-color: var(--footer-background);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#currentyear, #lastModified {
+    padding: 0;
 }
 
 footer div {
-    flex: 1;
     padding: 1rem;
 }
 
-.socials {
-    display: flex;
-    flex: row;
-    gap: 1rem;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.socials li a {
+.social-media img {
     border-radius: 50%;
     background-color: var(--primary-color-contrast);
-    text-decoration: none;
-    padding: 1rem;
+    padding: .5rem;
     border: 2px solid var(--primary-color);
-    display: inline-block;
-    width: 36px;
-    height: 32px;
+    
     text-align: center;
     line-height: 36px; 
     transition: all 0.3s ease;
 }
 
-.socials li a:hover {
+.social-media a {
+    text-decoration: none;
+}
+
+.social-media img:hover {
     background-color: rgba(22, 78, 112, 0.5);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     color: var(--background-color-contrast);
-}
-
-#currentyear, #lastModified {
-    padding: 0;
 }
