update footer bg

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -205,6 +205,11 @@ p {
     padding: 0;
 }
 
+footer {
+    background-color: var(--footer-background);
+    margin-top: 1rem;
+}
+
 footer div {
     padding: 1rem;
 }
