--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -219,14 +219,16 @@ footer div {
     background-color: var(--primary-color-contrast);
     padding: .5rem;
     border: 2px solid var(--primary-color);
-    
     text-align: center;
     line-height: 36px; 
-    transition: all 0.3s ease;
 }
 
 .social-media a {
     text-decoration: none;
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    margin-right: 1.3rem;
 }
 
 .social-media img:hover {
