--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -131,6 +131,7 @@ section:hover {
 .list {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .list section {
@@ -141,7 +142,8 @@ section:hover {
     box-shadow: none;
     border: 1px solid rgba(0, 0, 0, 0.2);
     overflow-x: scroll;
-    width: 320px;
+    width: 100%;
+    max-width: 320px;
 }
 
 .list section > * {
