--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -253,6 +253,7 @@ footer div {
 section.hero {
     position: relative;
     width: 100%;
+    max-width: 100%;
     height: 50vh;
     padding: 0;
 }
@@ -260,24 +261,24 @@ section.hero {
 section.hero img {
     width: 100%;
     height: auto;
-    object-fit: cover;
-    object-position: center;
 }
 
 .cta-button {
     text-decoration: none;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color-contrast);
     color: var(--background-color-contrast);
     padding: 0.6rem 1rem;
     font-size: 0.8rem;
     border-radius: 4px;
     transition: background-color 0.3s ease;
     display: inline-block;
-    font-weight: bold;
+    font-weight: 900;
     position: absolute;
     bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%;
+    transform: translateX(-50%); */
+    right: 1rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .cta-button:hover {
