fix border to none for section in home page

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -252,15 +252,27 @@ footer div {
 section.hero {
     position: relative;
     max-width: 100%;
-    height: 50vh;
+    max-height: 50vh;
     padding: 0;
     margin: 0;
-    border: 0;
+    box-shadow: none;
+    border: none;
+    overflow: hidden;
 }
 
 section.hero img {
     width: 100%;
     height: auto;
+    box-shadow: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+section.hero img:hover {
+    border: none;
+    transition: none;
+    box-shadow: none;
 }
 
 .cta-button {
@@ -268,7 +280,7 @@ section.hero img {
     background-color: var(--primary-color-contrast);
     color: var(--background-color-contrast);
     padding: 0.6rem 1rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
     border-radius: 4px;
     transition: background-color 0.3s ease;
     display: inline-block;
@@ -279,9 +291,5 @@ section.hero img {
     transform: translateX(-50%); */
     right: 1rem;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-.cta-button:hover {
-    background-color: #e09200;
 }
 /* End of Home Page */
