update the layout for the top 3 company cards layout done

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -313,10 +313,29 @@ section.hero img:hover {
     margin-bottom: 0;
 }
 
+.spotlights section a {
+    text-decoration: none;
+}
+
 .breakline {
     height: 1px;
     width: 100%;
     border: none;
     border-bottom: 1px solid #CCC;
+}
+
+.infoDiv {
+    display: flex;
+    flex-direction: row;
+}
+
+.infoDiv img{
+    padding-right: .5rem;
+}
+
+.textDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 /* end of spotlight cards */
