--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -76,4 +76,37 @@
     footer div {
         flex: 1;
     }
+
+    /* -------- HOME PAGE -------- */
+    section.hero {
+        width: 100%;
+        height: 60vh;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 0;
+    }
+    section.hero img {
+        background-image: url('images/images/hero-image.webp');
+        width: 1920px;
+        max-width: 1200px;
+        height: 60vh;
+    }
+    .cta-button {
+        background-color: var(--background-color-contrast);
+        color: var(--primary-color-contrast);
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        padding: 1rem 1rem;
+        font-size: 1.2rem;
+        font-weight: 700;
+        bottom: 20px;
+        left: 15%;
+        bottom: 24%;
+        width: 10rem;
+    }
+    .cta-button:hover {
+        transform: scale(1.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
+    }
+    /* -------- END HOME PAGE -------- */
 }
