good result from testing to css contrast and lighthouse performance

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -86,9 +86,8 @@
         padding: 0;
     }
     section.hero img {
-        background-image: url('images/images/hero-image.webp');
         width: 1920px;
-        max-width: 1200px;
+        max-width: 1350px;
         height: 60vh;
     }
     .cta-button {
@@ -107,6 +106,14 @@
         transform: scale(1.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
+    }
+    .infoDiv img{
+        width: 75px;
+        height: 75px;
+        object-fit: contain;
+    }
+    #home-main-container {
+        padding: 0;
     }
     /* -------- END HOME PAGE -------- */
 }
