--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 body, html, footer, footer div {
-    font-family: "Noto Serif Display", serif;
+    font-family: "Noto Serif", serif;
     font-weight: 400;
     font-style: normal;
     margin: 0;
@@ -130,8 +130,12 @@ section p {
     font-size: smaller;
 }
 
+#cards section {
+    border: 1px solid #CCC;
+}
+
 #cards section:hover {
-    border: 2px solid var(--primary-color);
+    border: 1px solid var(--primary-color);
     color: var(--primary-color);
     transition: .2s ease-in;
     box-shadow: none;
@@ -153,6 +157,11 @@ section p {
     overflow-x: scroll;
     width: 100%;
     max-width: 320px;
+    font-size: medium;
+}
+
+.list section h2 {
+    font-size: medium;
 }
 
 .list section > * {
@@ -161,10 +170,6 @@ section p {
 
 .list section img {
     display: none;
-}
-
-.list section h2 {
-    font-size: 1rem;
 }
 
 .list section:nth-child(even) {
@@ -347,6 +352,7 @@ section.hero img:hover {
 #events, #weather-forecast, #current-weather {
     max-width: 100%;
     padding: 0;
+    padding-bottom: 1rem;
     border: none;
     margin: .5rem 0;
 }
@@ -359,5 +365,21 @@ section.hero img:hover {
 
 #home-container {
     padding: 1rem;
+}
+
+#current-weather-description {
+    width: 100%;
+    display: flex;
+    flex-direction: row;     
+    justify-content: flex-start;  
+}
+
+#current-weather-details {
+    display: flex;
+    flex-direction: column;   
+    align-items: flex-start;
+}
+#temp {
+    font-size: 2rem;
 }
 /* End of Home Section */
