--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -379,7 +379,20 @@ section.hero img:hover {
     flex-direction: column;   
     align-items: flex-start;
 }
+
 #temp {
     font-size: 2rem;
+}
+
+#weather-forecast {
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#weather-forecast p {
+    padding-left: 1rem;
+    margin-top: .5rem;
 }
 /* End of Home Section */
