--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -84,20 +84,20 @@
     }
 
     /* -------- HOME PAGE -------- */
-    section.hero {
+    .hero {
         width: 100%;
         height: 60vh;
         max-width: 100%;
         max-height: 100%;
         padding: 0;
     }
-    section.hero img {
+    .hero img {
         width: 1920px;
         max-width: 1350px;
         height: 60vh;
         border-top: 1px solid var(--background-color);
     }
-    section.hero img:hover {
+    .hero img:hover {
         border-top: 1px solid var(--background-color);
     }
     .cta-button {
@@ -156,6 +156,10 @@
     }
     #events h2, #weather-forecast h2, #current-weather h2{
         padding: 1rem;
+    }
+
+    #current-weather-details p{
+        font-size: .9rem;
     }
     /* -------- END HOME PAGE -------- */
 }
