--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -163,4 +163,42 @@
         font-size: .9rem;
     }
     /* -------- END HOME PAGE -------- */
+
+    /* JOIN PAGE */
+    #join-main-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
+        gap: 1rem;
+        padding: 1rem;
+    }
+
+    #join-main-container h1 {
+        grid-row: 1;
+        text-align: center;
+        color: var(--primary-color);
+        padding: 0;
+        margin: 0;
+    }
+
+    #join-main-container #membership-levels {
+        margin-top: 1rem;
+        width: 100%;
+    }
+
+    #membership-application-form option {
+        width: 50%;
+        font-size: medium;
+    }
+
+    .content-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 1rem;
+    }
+
+    section#membership-levels {
+        padding-top: 0%;
+    }
+    /* END JOIN PAGE*/
 }
