--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -493,4 +493,8 @@ footer div {
     border: 1px solid var(--primary-color);
 }
 
+#thanks-main-container {
+    color: var(--primary-color);
+    text-align: center;
+}
 /* End of Join Page */
