update footer width height for better performance

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -224,6 +224,8 @@ p {
 footer {
     background-color: var(--footer-background);
     margin-top: 1rem;
+    min-height: 100px;
+    width: 100%;
 }
 
 footer div {
