--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -14,6 +14,9 @@ body, html, footer, footer div {
     font-weight: 400;
     font-style: normal;
     margin: 0;
+}
+
+body {
     font-display: swap;
 }
 
