--- a/mysite/styles/mobile.css
+++ b/mysite/styles/mobile.css
@@ -18,3 +18,16 @@ body {
     margin: 0;
     padding: 1rem;
 }
+
+#wireframe-images {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: red;
+}
+
+#wireframe-images img {
+    width: 100%;
+    height: auto;
+}
