--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    font-family: 'Kodchasan', sans-serif;
+    font-family: 'Kodchasan', sans-serif
 }
   
 h1, h2, h3, p, li, a {
