--- a/styles/style.css
+++ b/styles/style.css
@@ -228,6 +228,10 @@ section h2 {
     border-radius: .5rem;
 }
 
+#places-to-visit {
+    margin-top: 1rem;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
     html {
@@ -351,4 +355,11 @@ section h2 {
         width: 50px;
         height: 50px;
     }
+}
+
+#places-to-visit .cards {
+    border-radius: 1rem;
+    border: 1px solid lightgray;
+    padding: 1rem;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
 }
