--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -7,7 +7,7 @@
     --button-color-contrast: #E6EDEF;
 }
 
-@media only screen and (min-width: 38rem) {
+@media only screen and (min-width: 1025px) {
     
     header {
         border: none;
