--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -569,21 +569,36 @@ footer div {
 /* End of Join Page */
 
 #places-to-visit {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-areas:
+        "card1"
+        "card2" 
+        "card3"
+        "card4" 
+        "card5"
+        "card6"
+        "card7"
+        "card8"; 
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem; /* Sets the gap between grid items to 1rem */
 }
 
-#places-to-visit p {
-    margin-top: .5rem;
-    margin-bottom: 1rem;
-}
+.cards:nth-child(1) { grid-area: card1; }
+.cards:nth-child(2) { grid-area: card2; }
+.cards:nth-child(3) { grid-area: card3; }
+.cards:nth-child(4) { grid-area: card4; }
+.cards:nth-child(5) { grid-area: card5; }
+.cards:nth-child(6) { grid-area: card6; }
+.cards:nth-child(7) { grid-area: card7; }
+.cards:nth-child(8) { grid-area: card8; }
 
 #places-to-visit .btn {
-    margin-top: 1rem;
     background-color: var(--primary-color);
     color: var(--button-color-contrast);
     padding: .5rem 1rem;
     border: 1px solid var(--primary-color);
+    margin: 0;
+    margin-bottom: 1rem;
 }
 
 #discover-container address {
@@ -596,14 +611,14 @@ footer div {
 }
 
 #discover-container button {
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
 }
 
 #places-to-visit .cards {
     border-radius: 1rem;
     border: 1px solid lightgray;
-    margin: .2rem .5rem;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+    margin: 0rem 1rem;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 #places-to-visit img {
@@ -613,4 +628,10 @@ footer div {
 
 #places-to-visit figure {
     margin: 0;
+}
+
+#places-to-visit p {
+    margin-top: .5rem;
+    margin-bottom: 20px;
+    display: block;
 }
