--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -560,11 +560,7 @@ footer div {
     border-radius: 1rem;
 }
 
-#thanks-main-container h2 {
-    font-size: medium;
-}
-/* End of Join Page */
-
+/* Discover page */
 #places-to-visit {
     display: grid;
     grid-template-areas:
@@ -576,8 +572,9 @@ footer div {
         "card6"
         "card7"
         "card8"; 
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem; /* Sets the gap between grid items to 1rem */
+    grid-template-columns: repeat(1, 1fr);
+    gap: .5rem; /* Sets the gap between grid items to 1rem */
+    padding: 0 !important;
 }
 
 .cards:nth-child(1) { grid-area: card1; }
@@ -589,47 +586,36 @@ footer div {
 .cards:nth-child(7) { grid-area: card7; }
 .cards:nth-child(8) { grid-area: card8; }
 
-#places-to-visit .btn {
-    background-color: var(--primary-color);
-    color: var(--button-color-contrast);
-    padding: .5rem 1rem;
-    border: 1px solid var(--primary-color);
-    margin: 0;
-    margin-bottom: 1rem;
-}
-
-#discover-container address {
-    color: #000;
-}
-
-#discover-container h2 {
-    margin-top: 1rem;
-    color: var(--primary-color);
-}
-
-#discover-container button {
-    margin-bottom: 5rem;
-}
-
-#places-to-visit .cards {
+.cards {
     border-radius: 1rem;
     border: 1px solid lightgray;
-    margin: 0rem 1rem;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
+figure {
+    margin: 0;
+}
+
 #places-to-visit img {
+    margin: 0;
     width: 300px;
     height: 200px;
     margin-bottom: 1rem;
 }
 
-#places-to-visit figure {
-    margin: 0;
+#places-to-visit p, address {
+    padding: 0 1rem !important;
 }
 
-#places-to-visit p {
-    margin-top: .5rem;
-    margin-bottom: 20px;
-    display: block;
+#places-to-visit button {
+    background-color: var(--primary-color);
+    color: var(--primary-color-contrast);
+    border: none;
+    padding: .3rem 1rem;
+    margin-bottom: 1rem;
 }
+
+#places-to-visit h2 {
+    color: var(--primary-color);
+}
+/* End discover page */
