--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -5,6 +5,7 @@
     --background-color-contrast: #000;
     --button-color: #64301D;
     --button-color-contrast: #E6EDEF;
+    --footer-background: #F0F0F0;
 }
 
 @media only screen and (min-width: 1025px) {
