--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -13,7 +13,7 @@
     header {
         border: none;
         font-size: 1.5rem;
-        display: grid;
+        /* display: grid; */
         grid-template-columns: 75px minmax(150px, 200px) auto;
     }
     
@@ -27,7 +27,8 @@
         display: none;
     }
 
-    .navigation, .navigation.open {
+    .navigation, 
+    .navigation.open {
         display: block;
     }
 
@@ -56,13 +57,13 @@
 
     section {
         width: clamp(300px, 100%, 350px);
-        max-width: 90%;
+        /* max-width: 90%; */
     }
 
     .list section {
         overflow-x: hidden;
         width: 100%;
-        max-width: 100%;
+        /* max-width: 100%; */
     }
 
     footer {
@@ -94,9 +95,12 @@
         padding: 0;
     }
     .hero img {
-        width: 1920px;
+        /* width: 1920px; */
+        width: 100%;
+        height: auto;
         max-width: 1350px;
-        height: 60vh;
+        /* height: 60vh; */
+        object-fit: cover;
         border-top: 1px solid var(--background-color);
     }
     .hero img:hover {
@@ -109,7 +113,8 @@
         padding: 1rem 1rem;
         font-size: 1.2rem;
         font-weight: 700;
-        bottom: 20px;
+        /* bottom: 20px; */
+        bottom: 24%;
         left: 15%;
         bottom: 24%;
         width: 10rem;
@@ -147,21 +152,30 @@
         grid-template-columns: 2fr 1fr 1fr;
         gap: 1rem;
     }
-    #events, #weather-forecast, #current-weather {
+    #events, 
+    #weather-forecast, 
+    #current-weather {
         height: auto;
     }
-    #events:hover, #weather-forecast:hover, #current-weather:hover{
+
+    #events:hover, 
+    #weather-forecast:hover, 
+    #current-weather:hover {
         transform: translateY(-5px);
         transition: 0.3s ease;
     }
+
     #events {
         width: 100%;
     }
-    #events h2, #weather-forecast h2, #current-weather h2{
+
+    #events h2, 
+    #weather-forecast h2, 
+    #current-weather h2 {
         padding: 1rem;
     }
 
-    #current-weather-details p{
+    #current-weather-details p {
         font-size: .9rem;
     }
     /* -------- END HOME PAGE -------- */
@@ -249,6 +263,7 @@
         "card7 card8 .";
         grid-template-columns: repeat(3, 1fr);
         gap: 1rem;
+        margin-top: 1rem;
     }
 
     #places-to-visit .cards {
@@ -316,8 +331,8 @@
     }
     
     .btn:hover {
-        background-color: var(--primary-color-contrast) !important;
-        color: var(--primary-color) !important;
+        background-color: var(--primary-color-contrast);
+        color: var(--primary-color);
         padding: .5rem 1rem;
         border: 1px solid var(--primary-color);
         cursor: pointer;
@@ -328,7 +343,7 @@
     }
 
     #places-to-visit img {
-        width: 300px !important;
+        width: 300px;
         max-width: 300px;
         height: 200px;
     }
